--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -103,7 +103,7 @@
     </div>
     <% } %>
     <% if(success && success.length>0) { %>
-    <div class="alert alert-success" role="alert">
+    <div class="text-white bg-primary text-center font-weight-bold" role="alert">
       <%=success%>
     </div>
     <% } %>
