--- a/views/login.ejs
+++ b/views/login.ejs
@@ -87,12 +87,12 @@
 
   <div class="container">
     <% if(error && error.length>0) { %>
-    <div class="text-white bg-danger text-center font-weight-bold display-5" role="alert">
+    <div class="text-white bg-primary text-center font-weight-bold" role="alert">
       <%=error%>
     </div>
     <% } %>
     <% if(success && success.length>0) { %>
-    <div class="text-white bg-success text-center font-weight-bold display-5" role="alert">
+    <div class="text-white bg-primary text-center font-weight-bold" role="alert">
       <%=success%>
     </div>
     <% } %>
