--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -54,7 +54,7 @@
                 <button class="btn  dropdown-toggle text-white" type="button" id="dropdownMenuButton"
                     style=" background-color: transparent;" data-toggle="dropdown" aria-haspopup="true"
                     aria-expanded="false">
-                    My Account
+                     Signed In As <%=currentUser.username%>
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     <a class="dropdown-item" href="/logout">Logout</a>
