--- a/views/register.ejs
+++ b/views/register.ejs
@@ -149,8 +149,10 @@
               <div class="form-group">
                 <label for="txtpass" class="bg-white pass-label"><i style="color:#667db6 ;"
                     class="fa fa-key ml-1 mr-2"></i>Password</label>
-                <input type="password" id="txtpass" required="required" autocomplete="on" name="password"
-                  class="form-control" placeholder="Enter Your Password" />
+                <input type="password" id="txtpass" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" autocomplete="on"
+                  name="password" class="form-control"
+                  title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
+                  placeholder="Enter Your Password" required />
 
               </div>
 
@@ -264,7 +266,7 @@
 
 <!--------------------------------------local Javascrpt files--------------------------------------------------------->
 <script src="/scripts/sticky-navbar.js"></script>
-<script src="../scripts/validate-password.js"></script>
+
 
 <!-------------------------bootstrap javascript----------------------------->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -274,11 +276,64 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
   integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-<!--
-      <script>
-        var stateObj;
-        history.pushState(stateObj, "page without extension", "register");
-      </script>
-      -->
+<script>
+  var myInput = document.getElementById("txtpass");
+  var letter = document.getElementById("letter");
+  var capital = document.getElementById("capital");
+  var number = document.getElementById("number");
+  var length = document.getElementById("length");
+
+  // When the user clicks on the password field, show the message box
+  myInput.onfocus = function () {
+    document.getElementById("message").style.display = "block";
+  }
+
+  // When the user clicks outside of the password field, hide the message box
+  myInput.onblur = function () {
+    document.getElementById("message").style.display = "none";
+  }
+
+  // When the user starts to type something inside the password field
+  myInput.onkeyup = function () {
+    // Validate lowercase letters
+    var lowerCaseLetters = /[a-z]/g;
+    if (myInput.value.match(lowerCaseLetters)) {
+      letter.classList.remove("invalid");
+      letter.classList.add("valid");
+    } else {
+      letter.classList.remove("valid");
+      letter.classList.add("invalid");
+    }
+
+    // Validate capital letters
+    var upperCaseLetters = /[A-Z]/g;
+    if (myInput.value.match(upperCaseLetters)) {
+      capital.classList.remove("invalid");
+      capital.classList.add("valid");
+    } else {
+      capital.classList.remove("valid");
+      capital.classList.add("invalid");
+    }
+
+    // Validate numbers
+    var numbers = /[0-9]/g;
+    if (myInput.value.match(numbers)) {
+      number.classList.remove("invalid");
+      number.classList.add("valid");
+    } else {
+      number.classList.remove("valid");
+      number.classList.add("invalid");
+    }
+
+    // Validate length
+    if (myInput.value.length >= 8) {
+      length.classList.remove("invalid");
+      length.classList.add("valid");
+    } else {
+      length.classList.remove("valid");
+      length.classList.add("invalid");
+    }
+  }
+</script>
 
 </html>
