--- a/views/register.ejs
+++ b/views/register.ejs
@@ -26,7 +26,7 @@
 
   <!-------------------------------------Font Awesome Icons----------------------------------------->
   <script async defer src="/scripts/all.min.js"></script>
-  <scriptv async defer src="/scripts/fontawesome.min.js">
+  <script async defer src="/scripts/fontawesome.min.js">
   </script>
 
 
