--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -110,7 +110,7 @@
   </div>
   <div class=" container-header ">
     <div class="jumbotron hero-image  text-center mb-0">
-      <h1 class=" text-center mt-sm-5  text-white">Welcome</h1>
+      <h1 class=" text-center mt-sm-5 heading-section text-white">Welcome</h1>
       <strong>
         <p class="text-center  text-white">To</p>
       </strong>
@@ -174,7 +174,7 @@
   <section class="baila-section section-one">
     <div class="container section_one-background">
       <div class="jumbotron indian-classical-jumbotron text-center p-0">
-        <h2 class="display-3">Classical Indian Dance and Music</h2>
+        <h2 class="display-3" heading-section>Classical Indian Dance and Music</h2>
         <div class="line mb-3"></div>
         <img src="/images/dance-indian.jpg" class="traditional-dance-img ml-auto mr-auto mb-3" />
         <div class="indian_dance-music-history indian-dance-music-spanish notranslate">
@@ -305,7 +305,7 @@
   <section class="baila-section section-two mb-5">
     <div class="container">
       <div class="jumbotron section_two-about-us text-center  ">
-        <h2 class="about-heading display-2 section-heading  ">
+        <h2 class="about-heading display-2 section-heading heading-section  ">
           Sobre
           <br>
           Baila Bollywood
@@ -356,7 +356,7 @@
   <!--Baila bollywood blogs section-->
   <%if(blogs){%>
   <div class="section-five review-slider">
-    <h1 class="section-heading text-white mx-5 mt-5 ml-5 mb-5 display-3 text-center">Our Blogs</h1>
+    <h1 class="section-heading text-white mx-5 mt-5 ml-5 mb-5 display-3 text-center heading-section">Our Blogs</h1>
     <div class="swiper-container container swiper-reviews">
       <div class="swiper-wrapper ">
         <%blogs.items.forEach(function(blog){%>
@@ -395,7 +395,7 @@
 
     <section class="baila-section section-four" id="pop-categ">
       </a>
-      <h2 class="display-2 popular-artist-heading text-center">Discover</h2>
+      <h2 class="display-2 popular-artist-heading text-center heading-section">Discover</h2>
       <div class="line mt-4 mb-4"></div>
       <h3 class="display-3 text-center">Most Popular Artists</h3>
 
@@ -438,8 +438,8 @@
     <section class="baila-section section-five" id="found-note">
       <div class="container-fluid p-0">
         <div class="jumbotron  content-center ">
-          <h3 class="font-weight-light text-center display-2 text-white">Our Founder</h3>
-          <h4 class="font-weight-light text-center display-4 font-weight-bold text-white">Subhas Yadav</h4>
+          <h3 class="font-weight-light text-center display-2 text-white heading-section">Our Founder</h3>
+          <h4 class="font-weight-light text-center display-4 font-weight-bold text-white ">Subhas Yadav</h4>
           <div class="line mt-2 mb-2  bg-white"></div>
           <div class="container-founder-image mt-5 mb-5 justify-content-center">
             <img src="/images/founder-sir.png" class="img-founder  " alt="Image of founder">
