--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -112,9 +112,9 @@
     <div class="jumbotron hero-image  text-center mb-0">
       <h1 class=" text-center mt-sm-5 heading-section text-white">Welcome</h1>
       <strong>
-        <p class="text-center  text-white">To</p>
+        <p class="text-center heading-section  text-white">To</p>
       </strong>
-      <h2 class=" text-center text-white notranslate">Baila Bollywood</h2>
+      <h2 class=" text-center text-white heading-section notranslate">Baila Bollywood</h2>
     </div>
   </div>
 
@@ -397,7 +397,7 @@
       </a>
       <h2 class="display-2 popular-artist-heading text-center heading-section">Discover</h2>
       <div class="line mt-4 mb-4"></div>
-      <h3 class="display-3 text-center">Most Popular Artists</h3>
+      <h3 class="display-3 text-center heading-section">Most Popular Artists</h3>
 
       <div class="container mt-5">
 
