--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -174,7 +174,7 @@
   <section class="baila-section section-one">
     <div class="container section_one-background">
       <div class="jumbotron indian-classical-jumbotron text-center p-0">
-        <h2 class="display-3" heading-section>Classical Indian Dance and Music</h2>
+        <h2 class="display-3 heading-section" >Classical Indian Dance and Music</h2>
         <div class="line mb-3"></div>
         <img src="/images/dance-indian.jpg" class="traditional-dance-img ml-auto mr-auto mb-3" />
         <div class="indian_dance-music-history indian-dance-music-spanish notranslate">
