--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -110,11 +110,11 @@
   </div>
   <div class=" container-header ">
     <div class="jumbotron hero-image  text-center mb-0">
-      <h1 class=" text-center mt-sm-5 heading-section text-white">Welcome</h1>
+      <h1 class=" text-center mt-sm-5 heading-section text-dark">Welcome</h1>
       <strong>
-        <p class="text-center heading-section  text-white">To</p>
+        <p class="text-center heading-section  text-dark">To</p>
       </strong>
-      <h2 class=" text-center text-white heading-section notranslate">Baila Bollywood</h2>
+      <h2 class=" text-center text-dark heading-section notranslate">Baila Bollywood</h2>
     </div>
   </div>
 
