--- a/public/stylesheets/login-register.css
+++ b/public/stylesheets/login-register.css
@@ -35,7 +35,7 @@
 }
 body
 {
-    background:url("https://drive.google.com/uc?id=1zjSPYS57_pXK_Oh0Tfslubdo_7wharl4");
+    background:url("../images/section-background.jpg");
 }
 
 .container-row
