--- a/views/login.ejs
+++ b/views/login.ejs
@@ -40,7 +40,7 @@
   <nav id="nav-header" class="navbar navbar-expand-lg navbar-light fixed-top sticky-top  ">
     <a class="navbar-brand" href="/"><img src="/images/Spanish-bolo-natraj-transparent.png" class="logo-navbar"
         alt="Logo Of Baila Bollywood"></a>
-    <button class="navbar-toggler border  mr-3" type="button" data-toggle="collapse"
+    <button class="navbar-toggler   mr-3" type="button" data-toggle="collapse"
       data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
       aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -98,7 +98,7 @@
   </div>
   <!---------------------------------Login Menu------------------------------------->
 
-  <section class="login-section" id="loginMenu">
+  <section class="login-section mt-5" id="loginMenu">
     <div class="container">
 
       <div class="row  container-row ">
