--- a/views/register.ejs
+++ b/views/register.ejs
@@ -55,7 +55,7 @@
   <nav id="nav-header" class="navbar navbar-expand-lg navbar-light  sticky-top  ">
     <a class="navbar-brand" href="/"><img src="/images/Spanish-bolo-natraj-transparent.png" class="logo-navbar"
         alt="Logo Of Baila Bollywood"></a>
-    <button class="navbar-toggler border  mr-3" type="button" data-toggle="collapse"
+    <button class="navbar-toggler   mr-3" type="button" data-toggle="collapse"
       data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
       aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -114,7 +114,7 @@
   </div>
 
   <!-----------------------------Register-Menu--------------------------------------->
-  <section class="register-section" id="registerMenu">
+  <section class="register-section mt-5" id="registerMenu">
     <div class="container">
 
       <div class="row container-row ">
