--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Ananda Namaste Regular;
-    src: url("/stylesheets/Ananda Namaste Regular.ttf");
+    src: url("../Ananda Namaste Regular.ttf");
   }
   
 *
@@ -192,7 +192,7 @@
   {
       position:absolute;
       z-index:2;
-      background-image:linear-gradient(to bottom,rgba(0, 29, 56, 0.8),#0009);
+      background-image:linear-gradient(to bottom,rgba(0, 29, 56, 0.6),#0009);
       width:100%;
       height: 100%;
       opacity:0;
@@ -229,10 +229,12 @@
   }
   .section-five
   {
-      background:url("https://drive.google.com/uc?id=1zjSPYS57_pXK_Oh0Tfslubdo_7wharl4");
+       background:url("../images/blog-section-bg.jpg");
   }
   
-  /*other section*/
+  /****************
+    section-one
+    *********************/
 .section_one-background
 {
     padding:20px;
@@ -244,6 +246,22 @@
 {
     background:#fff;
     
+}
+.dance-music-to-english
+{
+  background:#fff;
+  color:rgba(255, 95, 109, 1);
+  border:1px solid rgba(255, 95, 109, 0.8);
+  box-shadow:0px 1px 20px 0px rgba(46, 61, 73, 0.2);
+  font-weight:bolder;
+}
+.dance-music-to-spanish
+{
+  background:#fff;
+  color:rgba(247, 183, 51, 1);
+  border:1px solid rgba(247, 183, 51, 0.8);
+  box-shadow:0px 1px 20px 0px rgba(46, 61, 73, 0.2);
+  font-weight:bolder;
 }
 .indian_dance-music-history,
 .about_us-paragraph
@@ -258,13 +276,31 @@
     height:200px;
     width:300px;
 }
+/*************
+    About Baila Bollywood
+************/
 .about-image
 {
     width:300px;
     height:250px;
     shape-outside:circle(50%);
     margin:0 20px 20px 0;
-   
+}
+.spanish-to-english
+{
+  background:#fff;
+  color:rgba(255, 95, 109, 1);
+  border:1px solid rgba(255, 95, 109, 0.8);
+  box-shadow:0px 1px 20px 0px rgba(46, 61, 73, 0.2);
+  font-weight:bolder;
+}
+.english-to-spanish
+{
+  background:#fff;
+  color:rgba(247, 183, 51, 1);
+  border:1px solid rgba(247, 183, 51, 0.8);
+  box-shadow:0px 1px 20px 0px rgba(46, 61, 73, 0.2);
+  font-weight:bolder;
 }
 
 .section_two-about-us
@@ -295,7 +331,9 @@
     width:50px;
     color:white;
 }
-
+/**************
+    MOst Popular Artist
+*********/
 .popular-artist-videos
 {
     width:100%;
@@ -303,15 +341,19 @@
 }
 .load-more
 {
-    background-image:linear-gradient(to right,#1D4350,#A43931);
+    color:rgba(255, 95, 109, 1);
     font-size:2rem;
+    background:#fff;
     min-width:50px;
+    border:1px solid rgba(255, 95, 109, 1);
      border-radius:50px;
+      box-shadow:0px 1px 20px 0px rgba(46, 61, 73, 0.2);
 }
 .load-more:hover
 {
-    background:#1D4350;
-    color:white;
+    background:#fff;
+    color:rgba(247, 183, 51, 1);
+    border:1px solid rgba(247, 183, 51, 1);
 }
 
 /* Founders Note Section*/
@@ -464,18 +506,7 @@
     background:#02b875;
     border-color:#02b875;
 }
-.btn-close
-{
-    background:#b92b27;
-    color:#fff;
-    font-weight:900;
-}
-.btn-save
-{
-    background:#3b5999;
-    color:#fff;
-    font-weight:900;
-}
+
 .footer-right-img
 {
     height:100px;
