--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -422,7 +422,7 @@
 
 
         <div class="row mt-5 justify-content-center ">
-          <a class="  load-more btn font-weight-bold text-white" href="/login" target="_self"
+          <a class="  load-more btn font-weight-bold" href="/login" target="_self"
             title="Load More Videos">&#9733;&nbsp;&nbsp;&nbsp;Load More.&nbsp;&nbsp;&nbsp;&#9733;</a>
         </div>
       </div>
