--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -72,7 +72,7 @@
 }
 .modal-title
 {
-    font-size:2.1em;
+    /* font-size:2.1em; */
     font-weight:900;
 }
 /*From labels*/
@@ -122,8 +122,13 @@
     height:300px;
 }
 
-/*swiper medium blogs*/
-
+/**********
+swiper medium blogs section-five
+********** */
+.section-five
+  {
+      background:url("../images/section-background.jpg");
+  }
 .swiper-container {
     width: 100%;
     height: 100%;
@@ -227,14 +232,11 @@
       padding:30px;
       color:#fff;
   }
-  .section-five
-  {
-       background:url("../images/blog-section-bg.jpg");
-  }
   
-  /****************
-    section-one
-    *********************/
+  
+  /********************** 
+        section-one
+  ********************/
 .section_one-background
 {
     padding:20px;
@@ -245,7 +247,6 @@
 .indian-classical-jumbotron
 {
     background:#fff;
-    
 }
 .dance-music-to-english
 {
@@ -276,9 +277,9 @@
     height:200px;
     width:300px;
 }
-/*************
-    About Baila Bollywood
-************/
+/************
+  About Baila Bollywood
+  ***********/
 .about-image
 {
     width:300px;
@@ -286,7 +287,8 @@
     shape-outside:circle(50%);
     margin:0 20px 20px 0;
 }
-.spanish-to-english
+.spanish-to-english,
+.btn-close
 {
   background:#fff;
   color:rgba(255, 95, 109, 1);
@@ -294,7 +296,8 @@
   box-shadow:0px 1px 20px 0px rgba(46, 61, 73, 0.2);
   font-weight:bolder;
 }
-.english-to-spanish
+.english-to-spanish,
+.btn-save
 {
   background:#fff;
   color:rgba(247, 183, 51, 1);
@@ -331,9 +334,10 @@
     width:50px;
     color:white;
 }
-/**************
-    MOst Popular Artist
-*********/
+
+/**********
+  Most Popular Artist
+  **********/
 .popular-artist-videos
 {
     width:100%;
@@ -384,7 +388,7 @@
     min-height:100vh;
     flex-direction: column;
     align-items: center;
-    background:linear-gradient(to bottom,rgba(220, 36, 36, 0.6),rgba(1,1,1,0.7)), url("https://drive.google.com/uc?id=1lKWYZyG56HR3WLn2EOTU4nSTdIbyp_K7");
+    background:linear-gradient(to bottom,rgba(220, 36, 36, 0.6),rgba(1,1,1,0.7)), url("../images/red-forest-bg.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -442,80 +446,100 @@
    
 }
 /* Footer */
+/***********
+    Privacy Policy Modal Box
+    **********/
+    .privacy-statement
+{
+    height:500px;
+    overflow-y: scroll;
+    padding:30px;
+    text-align:justify;
+}
 .footer-row
 {
     min-height:300px;
     background:rgba(0, 29, 56, 1);
+    
 }
 .footer-left,
 .footer-center,
 .footer-right
 {
+    color:#fff;
     display: flex;
     flex-direction: column;
     align-items: center;
     height:100%;
     width:100%;
-    color:white;
-    
 }
 
 .social-icons a
 {
     text-decoration: none;
+    color:rgba(247, 183, 51, 1);
     font-size:2rem;
     padding:15px;
     height:60px;
     width:60px;
-    border:1px solid #fff;
+    border:1px solid rgba(255, 95, 109, 1);
     margin:5px;
-    color:white;
 }
 .fa-facebook:hover
 {
     background: #3b5999;
     border-color:#3b5999;
+    color:#fff;
 }
 .fa-youtube:hover
 {
     background:#cd201f;
     border-color:#cd201f;
+    color:#fff;
 }
 .fa-twitter:hover
 {
     background:#55acee;
     border-color:#55acee;
+    color:#fff;
 }
 .fa-linkedin:hover
 {
     background:#0077B5;
     border-color:#0077B5;
+    color:#fff;
 }
 .fa-instagram:hover
 {
     background:#e4405f;
     border-color:#e4405f;
+    color:#fff;
 }
 .fa-quora:hover
 {
     background:#b92b27;
     border-color:#b92b27;
+    color:#fff;
 }
 .fa-medium:hover
 {
     background:#02b875;
     border-color:#02b875;
+    color:#fff;
 }
 
 .footer-right-img
 {
-    height:100px;
-    width:100px;
-    margin-top:7rem;
+    height:200px;
+    width:200px;
+    margin-top:6rem;
+    transform: scale(1.6);
+    /*
     animation:rocket 1s ease infinite alternate;
     transition:all 0.5s ease;
+    */
 }
-
+/*
 @keyframes rocket
 {
     0%
@@ -527,15 +551,17 @@
         transform:translateY(0px);
     }
 }
+*/
 
 .footer-section
 {
     width:100%;
     min-height:50px;
-    background:rgba(0, 29, 56, 1);
-    color:white;
+    background:linear-gradient(to right ,rgba(255, 95, 109, 1),rgba(247, 183, 51, 1));
+    color:#fff;
     text-align:center;
     padding:10px;
+    font-weight: lighter;
 }
 .footer-section img
 {
