--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,8 +19,8 @@
   <!---------------------------Google Fonts----------------------------------------->
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web:200&display=swap" rel="stylesheet">
   <!------------------Font Awesome Icons----s-------------------->
-  <script src="/scripts/all.min.js"></script>
-  <link rel="stylesheet" href=“https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css” />
+        <script src="/scripts/all.min.js"></script>
+        <script src="/scripts/fontawesome.min.js"></script>
   <!-------------------Custom css files------------------------------->
   <!----------------------------Navbar Css Files---------------------->
   <link rel="stylesheet" type="text/css" href="/stylesheets/navbar.css" />
