--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -49,7 +49,7 @@
             <a class="navbar-brand" href="/"><img src="/images/Spanish-bolo-natraj-transparent.png"
                     class="logo-navbar-left" alt="Logo Of Baila Bollywood"></a>
             <div class="dropdown mr-5">
-                <button class="btn  dropdown-toggle text-white" type="button" id="dropdownMenuButton"
+                <button class="btn  dropdown-toggle" type="button" id="dropdownMenuButton"
                     style=" background-color: transparent;" data-toggle="dropdown" aria-haspopup="true"
                     aria-expanded="false">
                     Signed in as <%=currentUser.username%>
