--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Ananda Namaste Regular;
-    src: url("../Ananda Namaste Regular.ttf");
+    src: url("./Ananda Namaste Regular.ttf");
   }
   
 *
