--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -52,7 +52,7 @@
   <nav id="nav-header" class="navbar navbar-expand-lg navbar-light sticky-top  ">
     <a class="navbar-brand p-0 m-0" href="/"><img src="/images/Spanish-bolo-natraj-transparent.png" class="logo-navbar"
         alt="Logo Of Baila Bollywood"></a>
-    <button class="navbar-toggler mr-3  border" type="button" data-toggle="collapse"
+    <button class="navbar-toggler mr-3  " type="button" data-toggle="collapse"
       data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
       aria-label="Toggle navigation">
       <span class=" navbar-toggler-icon"></span>
@@ -570,11 +570,12 @@
   </div>
 </div>
     <div class="footer-section ">
-    <i style="color:#fff"class="fa mr-3 fa-flag-checkered"></i><a href="#privacyPolicyModal" class="text-white text-center d-block mb-1"  data-toggle="modal" data-target="#privacyPolicyModal">Política de Privacidad</a>
+    <i style="color:#fff"class="fa mr-3 fa-flag-checkered"></i>
       Website Made With &hearts; By <a href=" https://www.linkedin.com/in/vaibhav-kaul-ab5941182/"
           class="text-white mx-1 font-weight-bold" target="_blank" title="Vaibhav's Linkedin Profile">Vaibhav Kaul</a>
       And <a href="https://www.linkedin.com/in/pawan-saggu-06589b157/" class="text-white font-weight-bold mx-1"
           target="_blank" title="Pawan's Linkedin Profile">Pawan Saggu</a>
+          <a style="text-decoration: underline;" href="#privacyPolicyModal" class="text-white text-center font-weight-bold mb-1"  data-toggle="modal" data-target="#privacyPolicyModal">Política de Privacidad</a>
       <br />
       &copy; 2020 Copyright BailaBollywood<img src="/images/Spanish-bolo-natraj-transparent.png">
   </div>
