--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -489,7 +489,7 @@
 
     <div class="footer-section m-0">
     <!---------------------------Privacy policy statement opens after clicking here-------------------->
-	<i style="color:#fff"class="fas mr-3 fa-flag-checkered"></i><a href="#privacyPolicyModal" class="text-white text-center d-block mb-1"  data-toggle="modal" data-target="#privacyPolicyModal">Política de Privacidad</a>
+	<i style="color:#fff"class="fas mr-3 fa-flag-checkered"></i><a style="text-decoration: underline;" href="#privacyPolicyModal" class="text-white text-center d-block mb-1"  data-toggle="modal" data-target="#privacyPolicyModal">Política de Privacidad</a>
         Website Made With &hearts; By <a href=" https://www.linkedin.com/in/vaibhav-kaul-ab5941182/"
             class="text-white mx-1 font-weight-bold" target="_blank" title="Vaibhav's Linkedin Profile">Vaibhav Kaul</a>
         And <a href="https://www.linkedin.com/in/pawan-saggu-06589b157/" class="text-white font-weight-bold mx-1"
@@ -500,12 +500,7 @@
     </div>
 
 </body>
-<script>
-    var load = document.getElementById('loader');
-    function myloader() {
-        load.style.display = "none";
-    }
-</script>
+
 
 <!--Bootstrap js files-->
 <script defer src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
