--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -570,7 +570,7 @@
   </div>
 </div>
     <div class="footer-section ">
-    <i style="color:#fff"class="fa mr-3 fa-flag-checkered"></i>
+    <i style="color:#fff"class="fa mr-3 d-block fa-flag-checkered"></i>
       Website Made With &hearts; By <a href=" https://www.linkedin.com/in/vaibhav-kaul-ab5941182/"
           class="text-white mx-1 font-weight-bold" target="_blank" title="Vaibhav's Linkedin Profile">Vaibhav Kaul</a>
       And <a href="https://www.linkedin.com/in/pawan-saggu-06589b157/" class="text-white font-weight-bold mx-1"
