--- a/views/register.ejs
+++ b/views/register.ejs
@@ -81,7 +81,7 @@
       <form class="form-inline  log-reg-btn ml-xl-5 ml-lg-5  justify-content-center">
         <% if(!currentUser) {%>
         <a class="btn  mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 login-btn " href="/login" target="_top"><i
-            class="fa fa-sign-in"></i> Iniciar Sesión </a>
+            class="fas fa-sign-in-alt"></i> Iniciar Sesión </a>
         <a class="btn mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3  register-btn " href="/register" target="_top"><i
             class="fa fa-user-plus"></i> Regístrate</a>
         <% }else{ %>
