--- a/views/register.ejs
+++ b/views/register.ejs
@@ -86,7 +86,7 @@
             class="fa fa-user-plus"></i> Regístrate</a>
         <% }else{ %>
         <a class="btn  mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 login-btn " href="/logout" target="_top"><i
-            class="fa fa-sign-in"></i> Cerrar Sesión</a>
+            class="fas fa-sign-in-alt"></i> Cerrar Sesión</a>
         <a class="btn  mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 register-btn " href="/dashboard" target="_top"><i
             class="fa fa-heart"></i> My Tablero</a>
         <% } %>
