--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -78,7 +78,7 @@
                     <div class="row music-playlist-row ">
                         <!----------------------------- 101-112 ----------------------------->
                         <div class="music-media-101  col-6 media-box">
-                            <a href="https://www.youtube.com/embed/FqMB9pWTJpk" target="videoScreenPlayer"
+                            <a href="https://youtube.com/embed/hyVxky19OxY" target="videoScreenPlayer"
                                 id="link-101">
                                 <img src="/images/video-poster-dashboard/aaja-sanam-madhur-chandani.jpg"
                                     class="img-music" id="img-101" alt="Dummy text" />
