--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -61,7 +61,7 @@
    <div class="collapse navbar-collapse justify-content-center " id="navbarSupportedContent">
           <ul class="navbar-nav nav nav-pills ">
             <li class="nav-item m-xl-2 active">
-              <a class="nav-link text-center font-weight-bold " href="index.html">Inicio </a>
+              <a class="nav-link text-center font-weight-bold " href="/">Inicio </a>
             </li>
             <li class="nav-item m-xl-2">
               <a class="nav-link text-center font-weight-bold " href="#about">
