--- a/views/team.ejs
+++ b/views/team.ejs
@@ -77,6 +77,7 @@
     position: relative;
     margin-top: 50px;
     height: 430px;
+    
 }
 .testimonial:before,
 .testimonial:after{
@@ -93,6 +94,7 @@
     left: auto;
     right: 0;
 }
+
 .testimonial .icon{
     display: inline-block;
     font-size: 80px;
@@ -126,7 +128,7 @@
     position: relative;
 }
 .testimonial .pic img{
-    width: 100%;
+    width: 120px;
     height:120px;
     image-orientation:inherit;
 }
@@ -160,10 +162,7 @@
     background: #ffd9b8;
     border-color: #fff;
 }
-    .pic img{
-        width: 100px !important;
-        height: 120px;
-    }
+   
     </style>
 
 </head>
