added html file

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -67,6 +67,10 @@
             <li class="nav-item m-xl-2">
               <a class="nav-link text-center font-weight-bold" data-toggle="modal" data-target="#exampleModalCenter" >Contacto</a>
             </li>
+            <li class="nav-item m-xl-2">
+              <a class="nav-link text-center font-weight-bold " href="/team">Equipo</a>
+            </li>
+            
             
           </ul>
       <form class="form-inline  log-reg-btn ml-xl-5 ml-lg-5  justify-content-center">
