--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -11,6 +11,7 @@
   <meta name="description"
     content="A Spanish Language Portal on Indian Dance Songs Subtitled into Spanish Language.Spanish Speakers can watch Bollywood Songs with Spanish Subtitles." />
   <meta name="robots" content="index, follow" />
+  <meta name="google-site-verification" content="86RNMqD2_RNqFP-WmWf9pmzSbjEz_RQMLAnS8yhKQpg" />
   <!--Meta tag for Responsiveness-->
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <!--Title bar Icon-->
